static/css/pages/home.scss
// All selectors are prefixed with .home
.header {
	background: $header;
	color: #fff;
	height: 740px; // 800 - 60
	margin-top:64px;
	overflow: hidden;
	position: relative;
	padding-top:$space40;
}
.header p.copy {
	opacity: .75;
	font-size: 10px;
	margin-bottom: 16px;
}
.ss-framer {
	max-width: 1024px;
	max-height:440px;
	position: absolute;
	bottom: 0; left:50%;
	margin-left: -512px;
	width:100%;
}
.ss-framer img {
	box-shadow: 0 8px 32px rgba(0,0,0,0.2);
}
.ss-video {
	position: absolute;
	top:calc(50% - 96px);
 	left:calc(75% - 70px);
	width:140px; height: auto;
}
// Framer Feature Overview
.framer-overview figure {
	display: block;
	margin-bottom: 24px;
}
.framer-overview h5 {
	margin-bottom: 16px;
}
.framer-overview p,
.feature-summary p {
	margin-bottom: 0;
}
// Vertical Spacing ------------------------------------
.footer h1 {
	margin-top: $space64;
}
.header {
	margin-bottom: $space72;
}
.header .btn {
	margin-bottom: $space16;
}
.screenshot-copy {
	margin-top: $space48;
}
.examples {
	margin-bottom: 160px;
	margin-top: 160px;
}
.video-banner {
	margin-bottom: $space64;
}
.examples-caption, 
.logo-string, 
.feature-banners,
.feature-summary {
	margin-bottom: $space80;
}
.screenshot-copy,
.feature-banners {
	margin-bottom: 96px;
}
// Icons infront of H5 Headlines
h5 figure {
	display: inline-block;
	margin-right: $space16;
}

// Logo string
.logo-string {
	text-align: center;
	color: #D3D8E1;
}
.logo-string figure {
	display: inline-block;
	position: relative;
	margin-bottom: 16px;
}
.logo-string figure+figure {
	margin-left: 80px;
}
// Vertical centering
.logo-google     { top:4px; }
.logo-twitter    { top:2px; }
.logo-facebook   { top:-2px; }
.logo-apple      { top:2px; }
.logo-instagram  { top:5px; }
.logo-spotify    { top:2px; }
.logo-adobe      { top:2px; }
.logo-groupon    { top:-4px; }
.logo-pinterest  { top:2px; }
.logo-slack      { top: 5px; }
.logo-soundcloud { top: 4px; }
.logo-uber       { top: 3px; }

// Examples Block
.examples {
	background: $examples-block;
	height: 570px;
	position:relative;
	padding: 0;
}
.examples a:hover {
	opacity: 1;
}
.examples .devices {
	margin: 0 auto;
	margin-left: -550px;
	width:1080px; 
	height:560px;
	left: 50%;
	position: relative;
}
.examples .devices a {
	position: absolute; 
}

a.device-macbook,
a.device-htc,
a.device-iphone5c,
a.device-nexus9 {
	@include transition(all, 0.25s, ease);
}
a.device-macbook,
a.device-htc,
a.device-iphone6,
a.device-iphone5c,
a.device-nexus9 {
	height: auto;
}
// Positioning
a.device-macbook{ 
	top: 120px;
	left: -33px; 
}
a.device-htc { 
	top: 47px;
	left: 170px; 
	z-index: 20;
}
a.device-iphone6 {
	left: 50%; margin-left: -184px;
	z-index: 100; 
	top:-88px;
	@include transition(all, 0.2s, ease);
}
a.device-iphone5c { 
	top: 46px;
	right: 158px;
	z-index: 50;
}
a.device-nexus9 {
	top: 132px;
	right: 0;
}
// Device video
.device-video {
	position: absolute;
	left:50%;
}
.device-video.mid {
	top: 85px;
	width:320px; 
	margin-left:-159px;
}
// Sizes
a.device-macbook img { 
	width: 581px; 
}
a.device-htc img { 
	width: 232px; 
}
a.device-iphone6 img  { 
	width: 369px;
}
a.device-iphone5c img  { 
	width: 228px; 
}
a.device-nexus9 img {
	width: 470px;
}
// Hover States
// a.device-macbook:hover,
// a.device-htc:hover,
// a.device-iphone5c:hover,
// a.device-nexus9:hover {
// 	@include scale(0.98);
// }
a.device-iphone6:hover {
	top: -94px;
}
a.device-macbook:hover,
a.device-htc:hover {
	@include transform(translateX(-6px));
}
a.device-iphone5c:hover,
a.device-nexus9:hover {
	@include transform(translateX(6px));
}
// Video Banner
.video-banner {
	background: $header url("/static/images/home/video-bg.png") no-repeat;
	height: 440px;
	width: 100%;
	display: block;
	border-radius: 3px;
	text-align: center;
	cursor: pointer;
	padding: 0 40px;
	position: relative;
	overflow: hidden;
}
// Blur on hover
.video-banner:after {
	content: "";
	width: 100%;
	height: 100%;
	position: absolute;
	top: 0;
	left: 0;
	background: $header url("/static/images/home/video-bg-blurred.png") no-repeat;
	z-index: 20;
	opacity: 0;
	@include transition(all, 0.5s, ease);
}
.video-banner:hover:after  {
	opacity: 1;
}
.video-banner section {
	max-width: 480px;
	margin: 0 auto;
	padding-top:100px;
	position: relative;
	z-index: 50;
}
.video-banner h4 {
	color: #fff;
}
.video-banner p {
	color: #A6B5CB;
	padding-left: 32px;
	padding-right: 32px;
	-webkit-font-smoothing: antialiased;
}
.video-banner .stripe-badge {
	position: absolute;
	bottom: 24px;
	left: 50%;
	margin-left: -50px;
	z-index: 50;
}
// Video Overlay
.video-overlay {
	position: fixed;
	top:0; 
	left:0; 
	width:100%;
	height:100%;
	background: rgba(255,255,255,0.95);
	z-index: 900;
	text-align: center;
	display: none;
}
// Video Wrapper
.video-position {
	max-width: 880px;
	margin: 0 auto;
	position: relative;
	top: 30%;
	display: block;
}
.video-wrapper {
	position: relative;
	padding-bottom: 56.25%; 
	height: 0;
}
// Video iFrame
.video-overlay iframe {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
}
// Close Icon
.video-overlay img {
	cursor: pointer;
	position: absolute;
	top: 32px;
	left: 32px;
	height: 30px;
	width: 30px;
}
.video-overlay.show {
	display: block;
}
// Feature Banners
.feature-banners img {
	margin-bottom: $space32;
}
.feature-banners p {
	max-width: 460px;
}
// Feature Summary
.feature-summary ul {
	margin-bottom: 0;
}
.feature-summary li+li {
	margin-top: $space16;
}
.feature-summary figure {
	display: block;
	margin-bottom: $space24;
}

// List fix
.content-inner ul li {
	list-style: none;
	padding:0;
	left:0;
}
// Media Queries
@media screen and (max-width:1080px) {
	.logo-string figure+figure {
		margin-left: 60px;
	}
}
@media screen and (max-width:1030px) {
	.header {
		height: 720px;
	}
	.ss-framer {
		max-width: 980px; // scale by 0.957
		margin-left: -490px;
		padding: 0 $space16;
		box-shadow: none;
	}
	.ss-video {
		top:calc(50% - 88px);
	 	left:calc(75% - 73px);
		width: 130px;	
	}
	.ss-framer img {
		position: relative;
		bottom: -4px;
	}
}
@media screen and (max-width:980px) {
	.header {
		height:600px;
	}
	.ss-framer {
		max-width: 720px; // scale 0.7
		margin-left: -360px;
	}
	.ss-video {
		display: none;
	}

	// Examples block
	.examples {
		height: 428px; 
		margin-bottom: 124px;
		margin-top: 104px;
	}
	.examples .devices {
		top: -64px;
		@include scale(0.75);
	}

	// Video Banner
	.video-banner {
		height: 400px;
	}
	.video-banner,
	.video-banner:after {
		background-size: cover;
		background-position: 45% 50%;
	}

	.video-banner section {
		padding-top: 80px;
	}
	// ****************
	// Vertical spacing
	.logo-string, 
	.feature-summary {
		margin-bottom: $space40;
	}
	.feature-banners {
		margin-bottom: 64px;
	}
	.logo-string figure {
		margin-bottom: $space24;
	}
	// Logo string
	.logo-string figure+figure {
		margin-left: 30px;
	}
}
@media screen and (max-width: 736px) {
	.header {
		padding-bottom:45%;
		height:auto;
		margin-bottom: $space48;
	}
	.ss-framer {
		max-width: 100%;
		margin-left: 0; left:0
	}
	.ss-video {
		display: none;
	}
	// Examples block
	a.device-macbook,
	a.device-nexus9 {
		display: none;
	}
	// Devices
	.device-video {
		display: none;
	}
	.examples-caption {
		text-align: center;
		margin-bottom: 48px;
	}
	// Video Banner
	.video-banner {
		max-width: 480px;
		height: 340px;
		margin: 0 auto;
		margin-bottom: 48px;
		padding: 0 32px;
	}
	.video-banner section {
		padding-top: 56px;
	}
	.video-banner .stripe-badge {
	}
	.video-banner h5 {
		font-size: 1.125em;
		margin-bottom: 32px;
	}
	// Feature Banners
	.feature-banners {
		margin: 0 auto;
		margin-bottom: 64px;
		text-align: center;
	}
	.screenshot-copy {
		margin-bottom: 80px;
	}
}
@media screen and (max-width:660px) {
	// ****************
	// Vertical spacing
	.examples {
		height: 280px;
		margin-top: 132px;
		margin-bottom: 132px;
	}
	.examples .devices {
		top: -140px;
		@include scale(0.6);
	}
	.feature-summary section+section {
		margin-bottom: 8px;
	}

}
@media screen and (max-width: 560px) {
	.header {
		margin-top: 0; // Nav is now pos:relative instead of absolute
		margin-bottom: $space32;
		padding-top: 120px;
	}
	.ss-framer {
		margin-left: 0;
		left:0;
	}
	// Framer Feature Overview
	.framer-overview section+section {
		margin-top: 24px;
	}
	.framer-overview figure {
		margin-bottom: 16px;
	}
	.framer-overview h5 {
		margin-bottom: 8px;
	}
	h5 figure {
		margin-bottom: -2px;
		margin-right: 12px;
	}
	.examples {
		height: 280px;
		margin-top: 108px;
		margin-bottom: 108px;
	}
	.examples-caption {
		margin-bottom: $space48;
	}
	.examples .devices {
		top: -140px;
		@include scale(0.5);
	}
	// Video Banner
	.video-banner {
		height: auto;
		margin-bottom: 24px;
		padding: 0 16px;
	}
	.video-banner section {
		padding-top: 48px;
		padding-bottom: 104px;
	}
	.video-banner p {
		padding-left: 16px;
		padding-right: 16px;
	}
	footer.footer img {
		margin-bottom: $space8;
		height: 64px;
		width: 64px;
	}
	// Feature list
	.feature-summary {
		margin-bottom: $space24;
	}
	// Logo string
	.logo-string figure {
		 @include scale(0.75);
		 margin-bottom: 8px;
	}
	.logo-string figure+figure {
		margin-left: 0;
	}

	// Vertical Spacing
	.feature-banners,
	.screenshot-copy {
		border-bottom: 1px solid $separator;
		margin-bottom: 32px;
		padding-bottom: 32px;
	}

}
@media screen and (max-width: 480px) {
	.header {
		margin-bottom: 0;
		padding-top: 110px;
	}
	.screenshot-copy {
		margin-top: $space24;
	}
	.header .btn {
		margin-bottom: 8px;
	}
	.header p.copy {
		margin-bottom: 16px;
		font-size: 8px;
	}

	// Video Banner
	.video-banner section {
		padding-top: 32px;
		padding-bottom: 80px;
	}
	// Feature Banners (Mirror & Importing)
	.feature-banners h5 {
		font-size: 16px;
	}
	// Feature summary titles
	.feature-summary h5 {
		margin-bottom: $space16;
	}
	// ****************
	// Vertical spacing M
	.examples {
		margin-top: 80px;
		margin-bottom: 96px;
	}
	.examples .devices {
		width:100%;
		margin-left: 0;
		left: 0;
	}
	a.device-htc {
		left: -132px;
	}
	a.device-iphone5c {
		right: -132px;
	}

	.feature-summary li+li {
		margin-top: 8px;
	}
	.logo-string figure {
		 @include scale(0.6);
		 margin-bottom: 4px;
	}
	.logo-string figure+figure {
		margin-left: -4px;
	}
}

